--- a/frontend/src/app/admin/layout/layout.component.html
+++ b/frontend/src/app/admin/layout/layout.component.html
@@ -3,9 +3,9 @@
     <div class="bg-light border-right" id="sidebar-wrapper">
         <div class="sidebar-heading">ADMINISTRATEUR</div>
         <div class="list-group list-group-flush">
-            <a href="admin/dashboard" class="list-group-item list-group-item-action bg-light"><i class="fa fa-tachometer" aria-hidden="true"></i>&nbsp; Dashboard</a>
+            <a routerLink="/admin/dashboard" class="list-group-item list-group-item-action bg-light"><i class="fa fa-tachometer" aria-hidden="true"></i>&nbsp; Dashboard</a>
             <a routerLink='/admin/doctors' class="list-group-item list-group-item-action bg-light"><i class="fa fa-user-md" aria-hidden="true"></i>&nbsp; Liste des docteurs</a>
-            <a href="#" class="list-group-item list-group-item-action bg-light"><i class="fa fa-users" aria-hidden="true"></i>&nbsp; Liste des sécretaires</a>
+            <a routerLink="/admin/secretaries" class="list-group-item list-group-item-action bg-light"><i class="fa fa-users" aria-hidden="true"></i>&nbsp; Liste des sécretaires</a>
             <a href="#" class="list-group-item list-group-item-action bg-light"><i class="fa fa-user-o" aria-hidden="true"></i>&nbsp; Liste des patients</a>
             <a href="#" class="list-group-item list-group-item-action bg-light"><i class="fa fa-bullhorn" aria-hidden="true"></i>&nbsp; Liste des réclamations</a>
         </div>
