--- a/frontend/src/app/admin/secretaries/secretaries.component.html
+++ b/frontend/src/app/admin/secretaries/secretaries.component.html
@@ -119,7 +119,7 @@
     <div class="jumbotron jumbotron-fluid mt-5" *ngIf="!secretaries?.length">
         <div class=" container ">
             <h1 class="display-4 ">Vous n'avez pas de secretaires</h1>
-            <p class="lead ">Vous pouvez ajouter un nouveau secretaire.</p>
+            <p class="lead ">Vous pouvez ajouter une nouvelle secretaire.</p>
         </div>
     </div>
     <!-- End List all doctors -->
